includes: add basic fonts

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -22,5 +22,5 @@
   {% endif %}
 
   <!-- Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&family=Noto+Serif+KR:wght@400;700&display=swap" rel="stylesheet">
 </head>
